@@ -261,6 +261,7 @@ class FrontendForm(ModelForm):
                            'apex_server_host', 'apex_application_id', 'apex_api_key',
                            'gatewatcher_alerts_host', 'gatewatcher_alerts_api_key',
                            'cisco_umbrella_client_id', 'cisco_umbrella_secret_key',
+                           'waf_barracuda_token'
                            ]:
             self.fields[field_name].required = False
 
@@ -366,6 +367,7 @@ class FrontendForm(ModelForm):
                   'apex_server_host', 'apex_application_id', 'apex_api_key',
                   'gatewatcher_alerts_host', 'gatewatcher_alerts_api_key',
                   'cisco_umbrella_client_id', 'cisco_umbrella_secret_key',
+                  'waf_barracuda_token'
                 )
 
         widgets = {
@@ -553,6 +555,7 @@ class FrontendForm(ModelForm):
             'gatewatcher_alerts_api_key': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
             'cisco_umbrella_client_id': TextInput(attrs={'class': 'form-control'}),
             'cisco_umbrella_secret_key': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
+            'waf_barracuda_token': TextInput(attrs={'type': 'password', 'class': 'form-control'}),
         }
 
     def clean_name(self):
